# galter-subjects-utils

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml  run-tests.sh  setup.cfg  setup.py  tasks.py
.github/workflows/: assess-prerelease-compatibility.yml  publish-to-pypi.yml  pypi-publish.yml  run-tests.yml  tests.yml
galter_subjects_utils/: __init__.py  adapter.py  cli.py  converter.py  deltor.py  downloader.py  keeptrace.py  reader.py  scheme.py  types_internal.py  updater.py  writer.py
galter_subjects_utils/contrib/lcsh/: __init__.py  adapter.py  cli.py  converter.py  downloader.py  scheme.py
galter_subjects_utils/contrib/mesh/: __init__.py  adapter.py  cli.py  converter.py  downloader.py  reader.py  scheme.py
tests/: conftest.py  test_deltor.py  test_keeptrace.py  test_lcsh.py  test_mesh.py  test_reader.py  test_updater.py  test_writer.py
tests/MeSH/: test_mesh.py
tests/contrib/lcsh/: test_converter.py  test_downloader.py
tests/contrib/lcsh/data/: fake_lcsh.skosrdf.jsonld
tests/contrib/mesh/: test_converter.py  test_downloader.py  test_reader.py
tests/contrib/mesh/data/: fake_meshnew2023.txt  fake_replace2023.txt  replace2024.txt
tests/data/mesh/: fake_meshnew2023.txt
