[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Northwestern University", email = "DL_FSM_GDS@e.northwestern.edu"}
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=7.0,<9.0",
    "invenio-access>=1.4.4,<2.0.0",
    "invenio-db[postgresql]>=1.0.14,<1.1.0",
    # invenio-db provides sqlalchemy & co
    "invenio-i18n<2.0.0",  # required for v11
    "invenio-rdm-records[opensearch2]>=1.1.0,<8.0.0",
    # invenio-rdm-records includes:
    # - invenio-drafts-resources
    # - invenio-records-records
    # - invenio-pidstore
    # - invenio-vocabularies
    "requests>=2.25.1,<3.0"
]
description = "Subject terms tooling for InvenioRDM"
keywords = ["invenio", "inveniordm", "subjects", "MeSH"]
license = {file = "LICENSE"}
name = "galter-subjects-utils"
readme = "README.md"
requires-python = ">=3.8"
scripts = {galter-subjects-utils = "galter_subjects_utils.cli:main"}
urls = {Repository = "https://github.com/galterlibrary/galter-subjects-utils"}
version = "0.3.0"

[project.optional-dependencies]
dev = [
    "check-manifest>=0.49",
    "invoke>=2.2,<3.0",
    "invenio-app>=1.3.3,<2.0.0",
    "invenio-search[opensearch2]>=2.1.0,<3.0.0",  # quirk of pytest-invenio requiring it
    "pytest-invenio>=2.1.1,<3.0.0",
    # pytest-invenio includes pytest & co and docker-services-cli
]


[project.entry-points."flask.commands"]
galter_subjects = "galter_subjects_utils.cli:main"


# Only setuptools usage
[tool.setuptools]
packages = ["galter_subjects_utils"]

[tool.check-manifest]
ignore = [
    ".*-requirements.txt",
    "*.bin",
    "*.gitkeep",
    ".venv/",
    ".editorconfig",
    "tasks.py"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--isort",
    "--pydocstyle",
    "--pycodestyle",
    "--doctest-glob='*.rst'",
    "--doctest-modules",
    "--cov=galter_subjects_utils",
    "--cov-report=term-missing",
    "--import-mode=importlib",
]
testpaths = ["tests", "galter_subjects_utils"]

[tool.pydocstyle]
add_ignore = ["D401", "D403"]
