[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Northwestern University", email = "DL_FSM_GDS@e.northwestern.edu"}
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Meant as compatibility constraints
    "invenio-app-rdm>=11.0.0,<13.0.0",
    # Meant as usage listing
    "click",
    "flask",
    "invenio_access",
    "invenio_db",
    "invenio_pidstore",
    "invenio_rdm_records",
    "invenio_records_resources",
    "invenio_vocabularies",
    "requests",
    "sqlalchemy",
]
description = "Subject terms tooling for InvenioRDM"
keywords = ["invenio", "inveniordm", "subjects"]
license = {file = "LICENSE"}
name = "galter-subjects-utils"
readme = "README.md"
requires-python = ">=3.8"
scripts = {galter-subjects-utils = "galter_subjects_utils.cli:main"}
urls = {Repository = "https://github.com/galterlibrary/galter-subjects-utils"}
version = "0.5.1"

[project.optional-dependencies]
dev = [
    "check-manifest>=0.49",
    "invenio-search[opensearch2]>=2.1.0,<3.0.0",  # Needs to be specified separately as it's up to instance
    "invoke>=2.2,<3.0",
    "pytest-invenio>=2.1.1,<3.0.0",
    # pytest-invenio includes pytest & co and docker-services-cli
]


[project.entry-points."flask.commands"]
galter_subjects = "galter_subjects_utils.cli:main"


# Only setuptools usage
[tool.setuptools.packages.find]
include = ["galter_subjects_utils", "galter_subjects_utils.*"]


[tool.check-manifest]
ignore = [
    ".*-requirements.txt",
    "*.bin",
    "*.gitkeep",
    ".venv/",
    ".editorconfig",
    "tasks.py"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--isort",
    "--pydocstyle",
    "--pycodestyle",
    "--doctest-glob='*.rst'",
    "--doctest-modules",
    "--cov=galter_subjects_utils",
    "--cov-report=term-missing",
    "--import-mode=importlib",
]
testpaths = ["tests", "galter_subjects_utils"]

[tool.pydocstyle]
add_ignore = ["D401", "D403"]
