# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2023 Northwestern University.
#
# galter-subjects-utils is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = galter-subjects-utils
version = attr: galter_subjects_utils.__version__
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
author = Northwestern University
author_email = DL_FSM_GDS@e.northwestern.edu
url = https://github.com/galterlibrary/galter-subjects-utils
platforms = any

[options]
zip_safe = False
include_package_data = True
install_requires =
    click>=7.0
    requests>=2.25.1

[options.extras_require]
dev =
    check-manifest>=0.49
    pytest>=7.2.0
    pytest-cov>=3.0.0
    pytest-isort>=3.0.0
    pytest-pydocstyle>=2.2.3
    pytest-pycodestyle>=2.2.0

[options.entry_points]
console_scripts =
    galter-subjects-utils = galter_subjects_utils.cli:tool_cli

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep
    .venv/

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=galter_subjects_utils --cov-report=term-missing
testpaths = tests galter_subjects_utils

[pydocstyle]
add_ignore = D401
